--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/miniaudio"]
 	path = deps/miniaudio
 	url = https://github.com/mackron/miniaudio.git
+[submodule "deps/rnnoise"]
+	path = deps/rnnoise
+	url = https://gitlab.xiph.org/xiph/rnnoise.git
